<resources>
    <string name="app_name">BloodMate</string>
    <string name="tag_line">Connecting Lives, One Drop at a Time</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="register_here">Register Here</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="todo">TODO</string>
    <string name="show_password">Show or Hide Password Button\n</string>
    <string name="SignUp">Sign Up</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="we_have_sended_the_4_digit_otp_to_your_number">We Have Sended The 6 Digit OTP To Your Number</string>
    <string name="submit">Submit</string>
    <string name="change_number">Change Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_the_new_password_for_your_account">Enter the new password for your account</string>
    <string name="messageOfProfile">If You Want to Modify Your Date Of Birth, Blood Group or Gender. Email Us using the button below</string>
    <string-array name="blood_groups">
        <item>Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="cities">
        <item>State/UT</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chhattisgarh</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Chandigarh</item>
        <item>Dadra and Nagar Haveli and Daman and Diu</item>
        <item>Delhi</item>
        <item>Lakshadweep</item>
        <item>Puducherry</item>
        <item>Jammu and Kashmir</item>
        <item>Ladakh</item>
    </string-array>
    <string-array name="urgency_level">
        <item>Urgency Level</item>
        <item>Low</item>
        <item>Moderate</item>
        <item>High</item>
        <item>Critical</item>
    </string-array>
</resources>