<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/forget_password"
        android:textColor="@color/blood"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/enter_the_new_password_for_your_account" />

    <TextView
        android:id="@+id/forgetPasswordNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="28sp"
        android:layout_marginVertical="5dp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <EditText
            android:id="@+id/forgetPasswordET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="password"
            android:background="@drawable/rounded"
            android:drawableStart="@drawable/keylogo"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginVertical="10dp"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp" />
        <ImageButton
            android:id="@+id/forgetShowPassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:padding="10dp"
            android:src="@drawable/visible"
            android:contentDescription="@string/show_password"
            app:tint="@color/blood" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
    <EditText
        android:id="@+id/forgetConfirmPasswordET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:background="@drawable/rounded"
        android:drawableStart="@drawable/keylogo"
        android:drawablePadding="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:layout_marginVertical="10dp"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp" />
        <ImageButton
            android:id="@+id/forgetShowConfirmPassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:padding="10dp"
            android:src="@drawable/visible"
            android:contentDescription="@string/show_password"
            app:tint="@color/blood" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password must be of 8 characters, contains at least one uppercase letter, one lowercase letter, one digit, one special character"
        android:textAlignment="center"
        android:layout_marginVertical="5dp"
        android:textColor="@color/black"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/forgetPasswordChangeNumberBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:paddingVertical="3dp"
            android:text="@string/change_number" />

        <Button
            android:id="@+id/changePasswordSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="3dp"
            android:text="@string/submit"
            android:backgroundTint="@color/black"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
</LinearLayout>