<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingTop="10dp"
    android:paddingEnd="5dp"
    android:paddingBottom="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/enter_otp"
        android:textColor="@color/blood"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/we_have_sended_the_4_digit_otp_to_your_number" />

    <TextView
        android:id="@+id/otpPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="28sp"
        android:layout_marginVertical="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <com.mukeshsolanki.OtpView
        android:id="@+id/otpView"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        app:OtpItemCount="6"
        android:focusable="true"
        android:inputType="number"
        android:focusableInTouchMode="true"
        android:textStyle="bold"
        android:hint="------"
        android:textSize="23sp"
        android:textColor="@color/blood"
        app:OtpItemSpacing="5dp"
        app:OtpViewType="rectangle"
        app:OtpLineColor="@color/blood"
        />
    <TextView
        android:id="@+id/resendOtpTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Resend OTP"
        android:focusable="true"
        android:textStyle="bold"
        android:focusableInTouchMode="true"
        android:paddingBottom="10dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textColor="@color/links"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/changeNumberBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/change_number" />

        <Button
            android:id="@+id/verifyOtpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/black"
            android:layout_alignParentEnd="true"
            />
    </RelativeLayout>
</LinearLayout>