<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded"
        android:contentDescription="@string/todo"
        android:src="@drawable/userlogo"
        android:tintMode="multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#8D7B7B" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/registerInformationContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/notRegisterdtxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_dp">

        <TextView
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/login"
            android:textColor="@color/blood"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phonetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/loginPhoneTxt"
            app:layout_constraintTop_toBottomOf="@+id/login_txt" />

        <EditText
            android:id="@+id/loginPhoneTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:background="@drawable/rounded"
            android:drawableStart="@drawable/phonelogo"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/login_txt"
            app:layout_constraintTop_toBottomOf="@+id/phonetxt" />

        <TextView
            android:id="@+id/passtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/phonetxt"
            app:layout_constraintTop_toBottomOf="@+id/loginPhoneTxt" />

        <EditText
            android:id="@+id/loginPasswordTxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:autofillHints="password"
            android:background="@drawable/rounded"
            android:drawableStart="@drawable/keylogo"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingBottom="15dp"
            app:layout_constraintEnd_toStartOf="@+id/showPassBtn"
            app:layout_constraintStart_toStartOf="@+id/loginPhoneTxt"
            app:layout_constraintTop_toBottomOf="@+id/passtxt" />

        <ImageButton
            android:id="@+id/showPassBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:padding="10dp"
            android:src="@drawable/visible"
            app:tint="@color/blood"
            android:contentDescription="@string/show_password"
            app:layout_constraintBottom_toBottomOf="@+id/loginPasswordTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/loginPasswordTxt" />

        <TextView
            android:id="@+id/forgetPasstxt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="0dp"
            android:paddingTop="12dp"
            android:paddingEnd="10dp"
            android:paddingBottom="15dp"
            android:text="@string/forget_password"
            android:textAlignment="viewEnd"
            android:textColor="@color/links"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPasswordTxt" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blood"
            android:fontFamily="sans-serif-medium"
            android:foreground="@drawable/rounded"
            android:paddingHorizontal="50dp"
            android:paddingVertical="15dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPasstxt" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/notRegisterdtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/don_t_have_an_account"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerHeretxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerHeretxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="15dp"
        android:paddingVertical="15dp"
        android:text="@string/register_here"
        android:textColor="@color/links"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/notRegisterdtxt"
        app:layout_constraintStart_toStartOf="@+id/notRegisterdtxt" />

</androidx.constraintlayout.widget.ConstraintLayout>